--- a/templates/webadmin.html
+++ b/templates/webadmin.html
@@ -14,15 +14,12 @@
             </div>
     </div>
 
-    <div class="column is-8 is-offset-2" id="test">
-        <h4 class="title is-4">Security Logs</h4>
-        <div class="box">
+    <div class="column is-8 is-offset-2" id="test" style="color:yellow">
+        <h4 class="title is-4">Security Logs </h4>
+        <div class="box" style="color:yellow">
             {% if logs %}
                 <div class="field">
-                <table class="table">
-                    <tr>
-                        <th>Last 25 Log Entries</th>
-                    </tr>
+                <table class="table" style="color:yellow">
                     {% for entry in logs %}
                         <tr>
                             <td>{{ entry }}</td>
@@ -30,11 +27,6 @@
                     {% endfor %}
                 </table>
             {% endif %}
-            <form method="POST" action="/logs">
-                <div>
-                    <button class="button is-info is-centered">View Logs</button>
-                </div>
-            </form>
             </div>
         </div>
     </div>
