--- a/templates/groups/group.html
+++ b/templates/groups/group.html
@@ -40,7 +40,7 @@
                             <td>{{ student_info[0] }}</td>
                             <td>{{ student_info[1] }}</td>
                             <td>{{ student_info[2] }}</td>
-                            <td>{{ student_info[3] }}</td>
+                            <td>{{ student_info[3] }}%</td>
                         </tr>
                     {% endfor %}
                 </tbody>
