--- a/templates/content.html
+++ b/templates/content.html
@@ -27,7 +27,29 @@
           </div>
         </div>
 </div>
-    {% endif %}
+{% endif %}
+    <!--------------------->
+{% if key_stage == 1 or current_user.role == 'teacher' %}
+    <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+        <div class="card mb-1">
+          <img src="https://belfasthills.org/wp-content/uploads/2015/02/Shallow-Tropical-Sea-Banner.jpg" class="card-img-top" alt="The sea">
+          <div class="card-body" style="font-family: 'Comic Sans MS', serif">
+            <h5 class="card-title">KS1 - The seas</h5>
+            <p class="card-text">
+                The seas are home to some of the worlds most magical creatures. Did you know that we have explored
+                just 5% of the sea?
+
+            The sea level in the world is currently rising, because lots of iceburgs are melting. This can cause lots
+                of problems, such as polar bears not having a home because there is no more ice.
+            </p>
+            <p class="card-text"><small class="text-muted">Task - think about what animals may still lurk
+            in the sea that we haven't yet discovered!</small></p>
+          </div>
+        </div>
+</div>
+{% endif %}
+    <!--------------------->
+
 {% if key_stage == 2 or current_user.role == 'teacher' %}
     <div class="card text-center shadow p-3 mb-5 bg-white rounded">
         <div class="card mb-1">
