Added "what you can do to stop climate change"

--- a/templates/content.html
+++ b/templates/content.html
@@ -49,7 +49,6 @@
 </div>
 {% endif %}
     <!--------------------->
-
 {% if key_stage == 2 or current_user.role == 'teacher' %}
     <div class="card text-center shadow p-3 mb-5 bg-white rounded">
         <div class="card mb-1">
@@ -80,6 +79,40 @@ Banner saying 'climate change' with a sun, clouds and thermometer behind it.">
             </p>
             <p class="card-text"><small class="text-muted">Task - do you think climate change is good, bad
             or both? Write a paragraph explaining why.</small></p>
+          </div>
+        </div>
+</div>
+    {% endif %}
+    <!--------------------->
+{% if key_stage == 2 or current_user.role == 'teacher' %}
+    <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+        <div class="card mb-1">
+          <img src="https://www.wagggs.org/documents/589/WAGGGS_COP_21_Banner_Girls_for_a_Greener_Future_without_text.jpg" class="card-img-top" alt="
+A melting planet">
+          <div class="card-body" style="font-family: 'Comic Sans MS', serif">
+            <h5 class="card-title">KS2 - What can you do to stop climate change?</h5>
+            <p class="card-text">
+                Fighting climate change doesn't have to be hard - if we all make small changes, big things can happen.
+                <br>
+                <br><b>Energy</b>
+                <br>- Turn off lights that you don't need!
+                <br>- Try and persuade your parents/carers to switch to energy saving LED bulbs
+                <br>
+
+                <br><b>Transport</b>
+                <br>- Walk or cycle when possible, it's great for the planet, mind and body
+                <br>
+
+                <br><b>Diet</b>
+                <br>- Eat more vegetables, fruits, grains, nuts and seeds
+                <br>- Eat less meat and dairy (try meat-free Mondays)
+                <br>
+                <br><b>Reduce, reuse, repair, recycle!</b>
+                <br>- Recycling is actually the last possible action you should take. It isn't perfect.
+                <br>- Before recycling, try and get as much use out of it as possible!
+            </p>
+            <p class="card-text"><small class="text-muted">Task - how many of these things do you
+            already do?</small></p>
           </div>
         </div>
 </div>
