--- a/templates/webadmin.html
+++ b/templates/webadmin.html
@@ -3,21 +3,13 @@
 {% block title %}Climate 4 Kids | Admin{% endblock %}
 
 {% block content %}
-    <div class="card text-center shadow p-3 mb-5 bg-white rounded">
-            <div class="card mb-3">
-              <img src="" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Security Logs</h5>
-              </div>
-            </div>
-    </div>
-
-    <div class="column is-8 is-offset-2" id="test" style="color:yellow">
-        <h4 class="title is-4">Security Logs </h4>
-        <div class="box" style="color:yellow">
+<div class="card text-left shadow p-3 mb-5 bg-white rounded">
+    <div class="column is-8 is-offset-2 float-left" id="test">
+        <h4 class="title is-4">Security Logs</h4>
+        <div class="box float-left" >
             {% if logs %}
-                <div class="field">
-                <table class="table" style="color:yellow">
+                <div class="field float-left ">
+                <table class="table">
                     {% for entry in logs %}
                         <tr>
                             <td>{{ entry }}</td>
@@ -27,5 +19,6 @@
             {% endif %}
             </div>
         </div>
+    </div>
     </div>
 {% endblock %}
