--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                         <a class="dropdown-item" href="{{ url_for('users.change_password') }}">Change Password</a>
 {#                        <a class="dropdown-item" href="{{ url_for('users.join_group', _username=current_user.username) }}">Join A Group</a>#}
                     <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="{{ url_for('users.logout') }}">Logout</a>
+                        <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Logout</a>
                     </div>
                 </div>
         {% else %}
@@ -66,10 +66,10 @@
                 <li class="nav-item">
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" style="" href="{{ url_for('users.login') }}">Login</a>
+                      <a class="nav-link" style="" href="{{ url_for('auth.login') }}">Login</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('users.register') }}">Register</a>
+                      <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
                   </li>
               </ul>
           {% endif %}
