--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Login{% endblock %}
+{% block title %}Climate4Kids | Login{% endblock %}
 {% block content %}
     <div class="card text-center shadow p-3 mb-5 bg-white rounded mx-auto my-auto" style="width: 35rem;">
         <div class="card mb-1">
@@ -20,7 +20,7 @@
         {% endwith %}
                 <!-- Check if login attempts is less than 4 -->
         {% if not session['logins'] or session['logins'] < 4 %}
-            <form method="POST" class="form" action="{{ url_for('users.login') }}">
+            <form method="POST" class="form" action="{{ url_for('auth.login') }}">
             {{ form.csrf_token }}
                 <div class="form-group col mb-6">
                     {{ form.username(class_="form-control", placeholder="Username") }}
