Major updates to base html and css for dynamic viewing

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,112 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8">
     <meta name="description" content="Fun Educational Learning Tool For Groups">
     <meta name="keywords" content="Education, Primary School, Climate Change, COVID Learning, Children, Deforestation, School, Class, Online Learning">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title> <!-- Allows for dynamic titles -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
     <link rel="icon" type="image/ico" href="{{ url_for('static', filename='media/favicon.ico') }}" sizes="16x16">
-</head>
-
-<body style="font-size: 20px">
-    <!-- NAVBAR CODE -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">
-            <img src="{{ url_for('static', filename='media/globe-blue.png') }}" alt="" class="icon"/>
-            <span class="logo-text"><img src="{{ url_for('static', filename='media/text-blue.png') }}" alt="" class="icon-text"/></span>
-            <span class="sr-only">(current)</span></a>
-
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-          <!-- NAVBAR LINKS -->
-        <ul class="navbar-nav mr-auto" style="margin:0; padding:10px;">
-        {% if current_user.is_authenticated and current_user.role == 'teacher' %}
-          <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('users.dashboard') }}">Dashboard</a>
-          </li>
-        {% endif %}
-        {% if current_user.is_authenticated %}
-          <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('users.content') }}">Educational Content</a>
-          </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('users.quizzes') }}">Quizzes</a>
-          </li>
-        {% endif %}
-
-        </ul>
-          <!-- END OF LEFT SIDE OF NAVBAR LINKS -->
-
-          <!-- RIGHT SIDE OF NAVBAR ACCOUNT LINK-->
-
-      </div>
-        <div class="navbar-text">
-          {% if current_user.is_authenticated %}
-              <div class="account-avatar">
-                  <img src="{{ url_for('static', filename='media/avatar.png') }}" class="img-av" alt="Default Avatar">
-                  <button style="font-size: 16px;" type="button" class="btn dropdown-toggle shadow-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      {{ current_user.name }}
-                    </button>
-
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="{{ url_for('users.account', _username=current_user.username) }}">Account</a>
-                        <a class="dropdown-item" href="{{ url_for('users.change_password') }}">Change Password</a>
-{#                        <a class="dropdown-item" href="{{ url_for('users.join_group', _username=current_user.username) }}">Join A Group</a>#}
-                    <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Logout</a>
+    <title>{% block title %}{% endblock %}</title> <!-- Allows for dynamic titles -->
+  </head>
+  <body>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="/">
+                    <img src="{{ url_for('static', filename='media/globe-blue.png') }}" alt="Climate4Kids Icon" class="icon"/>
+                    <span class="logo-text"><img src="{{ url_for('static', filename='media/text-blue.png') }}" alt="Climate4Kids Text" class="icon-text"/></span>
+                    <span class="sr-only">(current)</span>
+                </a>
+                <button class="navbar-toggler ml-auto navbar-light" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                        <!-- Navbar links -->
+                    <ul class="navbar-nav mr-auto" style="margin:0; padding:10px;">
+                    {% if current_user.is_authenticated and current_user.role == 'teacher' %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('users.dashboard') }}">Dashboard</a>
+                        </li>
+                    {% endif %}
+                    <!-- Authenticated Links -->
+                    {% if current_user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('users.content') }}">Educational Content</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('users.quizzes') }}">Quizzes</a>
+                        </li>
+                    {% endif %}
+                    </ul>
+                    <!-- END OF LEFT SIDE OF NAVBAR LINKS -->
+        
+                    <!-- RIGHT SIDE OF NAVBAR ACCOUNT LINK-->
+                    
+                <div class="navbar-nav">
+                    {% if current_user.is_authenticated %}
+                    <div class="account-dropdown" id="accountAvatarDropDown">
+                        <img src="{{ url_for('static', filename='media/avatar.png') }}" class="img-av" alt="Default Avatar">
+                        <button style="font-size: 16px;" type="button" class="btn dropdown-toggle shadow-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            {{ current_user.name }}
+                        </button>
+    
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <a class="dropdown-item" href="{{ url_for('users.account', _username=current_user.username) }}">Account</a>
+                            <a class="dropdown-item" href="{{ url_for('users.change_password') }}">Change Password</a>
+                        <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Logout</a>
+                        </div>
+                    </div>
+                    {% else %}
+                          <ul class="navbar-nav float-right">
+                          <li class="nav-item">
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+                            </li>
+                        </ul>
+                    {% endif %}
+                  </div>
+              </nav>
+        <div class="container-fluid" id="pageContainer">
+            <div id="pageHeader"></div>
+            <div class="row has-text-centered" id="pageWrapper">
+                    {% block content %}
+                    {% endblock %}
+             <!-- END OF WRAPPER-->
+            </div>
+            <div class="footer flex-container footer-copyright text-center font-weight-bold" id="pageFooter">
+                <div class="footer-main">Copyright &copy; 2022 Climate 4 Kids</div>
+                    <div class="github-icon">
+                        <a class="bi bi github" href="https://github.com/James-02/Climate4Kids">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-github" viewBox="0 0 16 16">
+                            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                        </svg>
+                        </a>
                     </div>
                 </div>
-        {% else %}
-                <ul class="navbar-nav float-right" style="align-content: end">
-                <li class="nav-item">
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" style="" href="{{ url_for('auth.login') }}">Login</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
-                  </li>
-              </ul>
-          {% endif %}
-        </div>
-    </nav>
-    <!-- END NAVBAR CODE -->
-
-    <div class="hero-body p-3">
-        <div class="container has-text-centered p-3 mb-5">
-            {% block content %}
-            {% endblock %}
-        </div>
     </div>
+  </body>
 
-
-    <!-- CARD CODE - Use this template when creating new blocks -->
-    <!--
-    <div class="card text-center">
-        <div class="card mb-3">
-          <img src="" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Block title</h5>
-            <p class="card-text">Block text</p>
-            <p class="card-text"><small class="text-muted">Block footer</small></p>
-          </div>
-        </div>
-    </div>
-    -->
-</body>
-
-    <footer>
-        <div class="footer-copyright text-center py-2 bg-light">Copyright &copy; 2022 Climate 4 Kids.</div>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </html>
