--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,17 +1,23 @@
-/*.navbar {*/
-/*    color: #63FF6C;*/
-/*}*/
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
-.navbar {
+
+/* -------------------------- base.html CSS Start -------------------------- */
+html, body {
     position: relative;
-    align-items: center;
-    vertical-align: middle;
     width: 100%;
-    height: auto;
-}
-.navbar-brand {
+    height: 100%;
+    min-height: 100%;
+    font-family: 'Source Sans Pro', sans-serif;
+    }
+
+.nav {
     position: relative;
-    width: 10%;
+    overflow: auto;
+}
+
+.navbar-brand {
+    display: inline;
+    position: relative;
+    width: 10rem;
     left: 20px;
 
     }
@@ -31,31 +37,20 @@
         position: absolute;
         padding: 4px;
     }
+
 .nav-item {
-    padding: 5px;
-    bottom: 10px;
+    padding: 1vw;
+    bottom: 2vw;
 }
-.card {
-        position: relative;
-    }
-    .card-img-av {
-        position: absolute;
-        top: 5px;
-        left: 5px;
-    }
-.navbar-text {
-    width: auto;
-    height: auto;
-    position:relative;
+
+.navbar-toggler:active,
+.navbar-toggler:focus {
+   outline: 0;
 }
-.quiz-main {
+
+.account-dropdown {
     display: flex;
-    align-items:center;
-    position: relative;
-}
-.account-avatar {
-    display: flex;
-    align-items:center;
+    align-items: center;
     position: relative;
     }
 
@@ -66,182 +61,116 @@
         height: 55px;
     }
 
-    .nav-link {
-        float: right;
-        position: center;
-        top: -20px;
-    }
-    .account-text {
-        position: absolute;
-    }
-
-    .nav-link:hover {
-        transition: all 0.1s linear;
-        transform: scale(1.03); /* (103% zoom)*/
-    }
-
-.navbar-brand:hover {
-transition: all 0.1s linear;
-transform: scale(1.03); /* (103% zoom)*/
+/* -------------------------- MAIN PAGE CONTENT -------------------------- */
+#pageContainer {
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-rows: 40vh auto 40vh;
+    background-image: url(../media/base-middle.jpg);
+    background-repeat: repeat;
+    width: 100%;
+    height: auto;
+    position: relative;
+}
+#pageHeader {
+    position: relative;
+    background-image: url(../media/base-top.jpg);
+    background-repeat: repeat-x;
+    background-size: contain;
+    width: 100%;
+    max-height: 100vh;
 }
 
-.navbar-text:hover {
-transition: all 0.1s linear;
-transform: scale(1.03); /* (103% zoom)*/
-}
-
-footer {
-	position: fixed;
-	width: 100%;
-	left: 0;
-	bottom: 0;
-    font-size: small;
-	background-color: lightblue;
-	color: black;
-	text-align: center;
-}
-
-html, body {
-  font-family: 'Source Sans Pro', sans-serif;
-  position: relative;
-  margin: 0;
-  border: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.login-form-end {
-    display:flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center
-}
-
-.home-img {
-    animation: fadeInAnimation ease 2s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-}
-
-@keyframes fadeInAnimation {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-     }
-}
-
-.home-img {
+#pageWrapper {
+    margin: 0 auto;
+    height: auto;
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 3px;
-    width: 35%;
-    height:35%;
-    transition: transform .2s;
+    padding: 2%;
+    align-items: center;
+    justify-content: center;
 }
 
-.home-img:hover {
-    transform: scale(1.1);
+#pageFooter {
+    position: relative;
+    width: 100%;
+    background-image: url(../media/base-bottom.jpg);
+    background-repeat: repeat-x;
+    background-size: contain;
+    font-size: small;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    color: black;
 }
 
-.hero-body {
-    height: 100%;
-    overflow: auto;
-    background-image: url('../media/background.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #195699;
-    background-attachment: fixed;
-}
-#card-button {
-    position:absolute;
-    right:15px;
-    top: 15px;
-}
-
-#card-button-edit {
-    position:absolute;
-    right:147px;
-    top: 15px;
-}
-
-#card-button-del {
-    position:absolute;
-    right:15px;
-    top: 15px;
-}
-
-#card-button-create {
-    position:absolute;
-    right: 160px;
-    top: 15px;
-}
-
-.card-review-1 {
-    transition: transform .2s;
-    animation: fadeInAnimation ease 2s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    position: absolute;
-    top: 150px;
-    right: 30px;
-    width: 20rem;
-    border-radius: 5px;
-    background-color: #fff;
-    margin-top: 30px;
-    padding: 30px 60px;
-}
-    .card-review-2 {
-        transition: transform .2s;
-        animation: fadeInAnimation ease 2s;
-        animation-iteration-count: 1;
-        animation-fill-mode: forwards;
-        position: absolute;
-        top: 150px;
-        left: 30px;
-        width: 20rem;
-        border-radius: 5px;
-        background-color: #fff;
-        margin-top: 30px;
-        padding: 30px 60px;
+    .github-icon {
+        margin-left: 5px;
+        margin-bottom: 2px;
     }
 
-.star-active {
-    color: #FBC02D;
-    margin-top: 10px;
-    margin-bottom: 10px
+@media (min-width: 1025px) {
+    #pageWrapper {
+        width: 90%;
+    }
+    .main-index-page {
+        width: 50%;
+    }
 }
 
-.star-inactive {
-    color: #CFD8DC;
-    margin-top: 10px;
-    margin-bottom: 10px
+@media (min-width: 481px) and (max-width: 1024px) {
+    #pageWrapper {
+        width: 90vw;
+    }
+    .main-index-page {
+        width: 40vw;
+    }
 }
 
-.content {
-    font-size: 18px
+@media (max-width: 480px) {
+    #pageWrapper {
+        width: 90vw;
+    }
+    .main-index-page {
+        width: 50vw;
+    }
 }
 
-.profile-pic {
-    width: 90px;
-    height: 90px;
-    border-radius: 100%;
-    margin-right: 30px
+/* -------------------------- base.html CSS End -------------------------- */
+
+.home-img {
+    width: 50%;
+    height: auto;
+    margin: 10px;
 }
 
-.quiz-main-title:visited {
-    color: mediumpurple;
-    background-color: transparent;
-    text-decoration: none;
+.main-index-page {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
-.quiz-main-title:hover {
-    color: blue;
-    transition: all 0.1s linear;
-    transform: scale(1.02);
-    background-color: transparent;
-    text-decoration: underline;
+.login-button {
+    margin-top: 7px;
+    margin-bottom: 7px;
+    width: 100%;
+    height: auto;
+}
+
+.register-button {
+    margin-top: 7px;
+    margin-bottom: 7px;
+    width: 100%;
+    height: auto;
+}
+
+.middle-text {
+    justify-self: center;
+}
+
+.card-img-av {
+    position: absolute;
+    top: 5px;
+    left: 5px;
 }
