Updated card class name to conform to css universally

--- a/templates/account.html
+++ b/templates/account.html
@@ -2,7 +2,7 @@
 {% block title %}Climate 4 Kids | {{ current_user.name }}{% endblock %}
 {% block content %}
 {% if current_user.role == 'student' or current_user.role == 'teacher' %}
-<div class="card text-center border-primary shadow p-3 mb-5 bg-white rounded">
+<div class="info-card text-center border-primary shadow p-3 mb-5 bg-white rounded">
     <div class="card mb-1">
       <img src="{{ url_for('static', filename='media/avatar.png')}}" class="card-img-av" alt="Default Avatar" style="float:left;width:72px;height:73px;">
       <div class="card-body">
@@ -50,7 +50,7 @@
     </div>
 </div>
     {% if group != None %}
-<div class="card text-center border-primary shadow p-3 mb-5 bg-white rounded">
+<div class="info-card text-center border-primary shadow p-3 mb-5 bg-white rounded">
         <div class="card mb-1">
           <img src="{{ url_for('static', filename='media/group-avatar.png')}}" class="card-img-av" alt="Default Group Avatar" style="float:left;width:72px;height:73px;">
           <div class="card-body">
