--- a/templates/groups/create_students.html
+++ b/templates/groups/create_students.html
@@ -2,7 +2,7 @@
 {% block title %} Climate 4 Kids | Create Students{% endblock %}
 {% block content %}
 
-<div class="card text-center shadow p-3 mb-5 bg-white rounded">
+<div class="info-card text-center shadow p-3 mb-5 bg-white rounded">
     <div class="card mb-1">
         <div class="card-body">
             <h3 class="title">Create Student Accounts</h3>
