--- a/templates/webadmin.html
+++ b/templates/webadmin.html
@@ -3,7 +3,7 @@
 {% block title %}Climate 4 Kids | Admin{% endblock %}
 
 {% block content %}
-<div class="card text-left shadow p-3 mb-5 bg-white rounded">
+<div class="info-card text-left shadow p-3 mb-5 bg-white rounded">
     <div class="column is-8 is-offset-2 float-left" id="test">
         <h4 class="title is-4">Security Logs</h4>
         <div class="box float-left" >
