--- a/templates/groups/edit_group.html
+++ b/templates/groups/edit_group.html
@@ -2,7 +2,7 @@
 {% block title %} Climate 4 Kids | Edit Group{% endblock %}
 {% block content %}
 
-    <div class="card text-center shadow p-3 mb-5 bg-white rounded">
+    <div class="info-card text-center shadow p-3 mb-5 bg-white rounded">
         <div class="card mb-1">
           <div class="card-body">
             <h3 class="title is-3">Edit Group</h3>
